# Game

./: .clang-format  .clang-format_header_files  .clang-format_source_files  LICENSE
client/project/: CMakeLists.txt  dynamic_data  less  world_generation  world_structure
client/project/src/: main.cpp
client/project/src/common/: AssimpGLMUtilities.cpp  AssimpGLMUtilities.h  Square.h  Utilities.cpp  Utilities.h
client/project/src/core/: Cursor.cpp  Cursor.h  Engine.cpp  Engine.h  GameInstance.cpp  GameInstance.h  GameProps.cpp  GameProps.h  Graphics.cpp  Graphics.h  Player.cpp  Player.h  PollEvents.cpp  PollEvents.h
client/project/src/core/assets/: AnimationBank.cpp  AnimationBank.h  ImageBank.cpp  ImageBank.h  ModelBank.cpp  ModelBank.h  TextureBank.cpp  TextureBank.h
client/project/src/core/assets/animation_structure/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  (+6 more)
client/project/src/core/configuration/: Constants.h  GameProps.cpp  GameProps.h
client/project/src/core/core_math/: NormalsCalculation.cpp  NormalsCalculation.h  Trigonometry.cpp  Trigonometry.h
client/project/src/core/input/: KeyboardInput.cpp  KeyboardInput.h  MouseButton.cpp  MouseButton.h  MouseInput.cpp  MouseInput.h
client/project/src/core/rendering/: BufferTypes.h  CameraGL.cpp  CameraGL.h  RendererBase.cpp  RendererBase.h  ShaderProgram.cpp  ShaderProgram.h
client/project/src/core/scenes_core/: IScene.cpp  IScene.h  SceneManager.cpp  SceneManager.h
client/project/src/default_theme/: RunNewGameInstance.cpp  RunNewGameInstance.h
client/project/stdafx/: stdafx.h
(+90 files in other folders)
